src/tests/test-src/errors/R15-eof-not-read-mode.syntran
// R15: eof-not-read-mode
// eof() was called on a file that wasn't opened in read ("r") mode

let f = open("build/rt_file_r15.txt", "w");
let done = eof(f);
